--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <h1>Happy Birthday, Vo Ha! </h1> <hr>
-  <small>  Make from <i class="fa fa-heart text-danger"></i> LCWL</small>
+  <small>  Make by <i class="fa fa-heart text-danger"></i> Lee Cuong With love</small>
  <p id="txt"></p>
  
   <canvas id="canvas_confetti">
@@ -71,7 +71,7 @@
   $(function(){
 
     $("#txt").typed({
-      strings: ["Chúc Mừng Sinh Nhật Võ Hà ( 26/09/2021 )" ,"Chúc Hà có một sinh nhật thật là vui vẻ !","Chúc Hà gặp nhiều thành công trong cuộc sống !","Best Wishes For You !", "From Lee Cuong With love (❁´◡`❁)"],
+      strings: ["Chúc Mừng Sinh Nhật Võ Hà ( 26/09/2021 )" ,"Chúc Hà có một sinh nhật thật là vui vẻ !","Chúc Hà gặp nhiều thành công trong cuộc sống !","Best Wishes For You !", "(❁´◡`❁)"],
       typeSpeed: 30,
       smartBackspace: true
     });
