--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   $(function(){
 
     $("#txt").typed({
-      strings: ["Chúc Mừng Sinh Nhật Võ Hà ( 26/09/2021 )" ,"Chúc Hà có một sinh nhật thật là vui vẻ !","Chúc Hà gặp nhiều thành công trong cuộc sống !","Best Wishes For You !", "(❁´◡`❁)"],
+      strings: ["Chúc Mừng Sinh Nhật Võ Hà ( 26/09/2021 )" ,"Chúc Hà có một sinh nhật thật là vui vẻ !","Chúc bạn gặp thật nhiều thành công trong cuộc sống !", "Chúc bạn sẽ mãi mãi xinh đẹp !","Best Wishes For You !", "(❁´◡`❁)"],
       typeSpeed: 60,
       smartBackspace: true
     });
