--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   $(function(){
 
     $("#txt").typed({
-      strings: ["Chúc Mừng Sinh Nhật Võ Hà ( 26/09/2021 )" ,"Chúc Hà có một sinh nhật thật là vui vẻ !","Chúc bạn gặp thật nhiều thành công trong cuộc sống !", "Chúc bạn sẽ mãi mãi xinh đẹp !","Best Wishes For You !", "(❁´◡`❁)"],
+      strings: ["Chúc Mừng Sinh Nhật Võ Hà ( 26/09/2021 )" ,"Chúc Hà có một sinh nhật thật là ý nghĩa !"," Chúc Hà sẽ luôn luôn vui vẻ !"," Mãi mãi xinh đẹp !", "Gặt hái được thật nhiều thành công trong cuộc sống !"," Và cuối cùng ", " Chúc đàng ấy có được mình nha (❁´◡`❁)"],
       typeSpeed: 60,
       smartBackspace: true
     });
